# ABO3_Perovskites_Classification

./: README.md  pyproject.toml
Notebook/: EDA copy.ipynb  EDA.ipynb  deepseek.ipynb  model.ipynb  model.py  model_generator.py
Notebook/__marimo__/: model.ipynb
src/abo3_perovskites_classification/: __init__.py
