[project]
name = "abo3-perovskites-classification"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zerin-Yeasmin", email = "zerinyeasmin@iut-dhaka.edu" }
]
dependencies = [
    "numpy==1.26.4",
    "tensorflow>=2.18.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.5.2",
    "marimo>=0.13.6",
    "lightgbm>=4.6.0",
    "shap>=0.47.2",
    "imbalanced-learn>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/abo3_perovskites_classification"]
